Agregue la verificacion de token y la verificacion y acceso

--- a/.env
+++ b/.env
@@ -6,3 +6,8 @@ DATABASE_PASSWORD=e1621sw-
 PORT=8000
 
 URI_FRONT=192.168.1.9
+
+JWT_EXPIRES_IN=5h
+JWT_SECRET=h74h853c%^$%3gy3_$UY
+
+BCRYPYT_SECURE_STRING=d45$^3r5#%F<E>W45<#@>@34>@<WC%#G45"
