--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ DATABASE_USER=mainUser
 DATABASE_SCHEMA=eina_fundation
 DATABASE_PASSWORD=e1621sw-
 
-PORT=8000
+PORT=5000
 
-URI_FRONT=192.168.1.9
+URI_FRONT=*
 
 JWT_EXPIRES_IN=5h
 JWT_SECRET=h74h853c%^$%3gy3_$UY
