--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   "author": "Richard Aldair",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
+    "dotenv": "^16.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
   }
 }
